RouteLogic-v4.0.0/force-app/main/default/objects/AI_Secure_Key__mdt/AI_Secure_Key__mdt.object-meta.xml
<CustomObject>
    <description>Stores secure key metadata for encryption key management</description>
    <label>AI Secure Key</label>
    <pluralLabel>AI Secure Keys</pluralLabel>
</CustomObject>