RouteLogic-v4.0.0/force-app/main/default/objects/AI_Secure_Key__mdt/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>When the key was created</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>