RouteLogic-v4.0.0/force-app/main/default/objects/AI_Secure_Key__mdt/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <description>Version number of the key for rotation tracking</description>
    <label>Key Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>