RouteLogic-v4.0.0/force-app/main/default/objects/AI_Secure_Key__mdt/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <description>Salt value for key derivation (hex encoded)</description>
    <label>Salt</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>